# SpaceFighter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: Game.cpp  Game.h  Object.h  Scene.cpp  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  getPath.cpp  getPath.h  main.cpp
